--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,12 +4,14 @@
         "ciberseguridad",
         "diagonalización",
         "DUDH",
+        "empoderarnos",
         "encapsulación",
         "FCFM",
         "gerenciales",
         "LMAD",
         "logodarkmode",
         "LSTI",
+        "MPCU",
         "muestrales",
         "multiplexores",
         "multivariables",
