--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "Cediilo",
         "ciberseguridad",
+        "conductual",
         "diagonalización",
         "DUDH",
         "empoderarnos",
@@ -15,6 +16,8 @@
         "muestrales",
         "multiplexores",
         "multivariables",
+        "resiliente",
+        "Santandreu",
         "SIASE",
         "UANL",
         "Zermeño"
